--- a/HomeWork-6/Task1/Task1.csproj
+++ b/HomeWork-6/Task1/Task1.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{11914293-6D55-4551-88D7-E873EEF6E235}</ProjectGuid>
+    <ProjectGuid>{4181DD12-AA6D-47BC-856D-87BEAA304E95}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Task1</RootNamespace>
-    <AssemblyName>Task1</AssemblyName>
+    <RootNamespace>Task1_1</RootNamespace>
+    <AssemblyName>Task1-1</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
